--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.2.0",
     "morgan": "^1.10.0",
     "mysql2": "^3.6.3",
-    "socket.io": "^4.7.2"
+    "socket.io": "^4.7.2",
+    "start": "^5.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
