--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
     "liveServer.settings.port": 5501
+    ,    "workbench.colorCustomizations": {
+        "titleBar.activeBackground": "#4d62ff",
+        "titleBar.inactiveBackground": "#4d56ff"
+    },
+    "explorer.compactFolders": false
 }
+
